--- a/src/components/filters/Genre/styles.scss
+++ b/src/components/filters/Genre/styles.scss
@@ -56,6 +56,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(71, 71, 71, 0.75); 
+  z-index: 1000;
 }
 .modal button {
   color: #ccc;
